Add Codidate link.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Welcome to the Codidate blog!</h1>
+  This is the official <a href="https://codidate.com">Codidate</a> blog on Github!
   <footer>Codidate 2019</footer>
 </body>
 </html>
